--- a/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -14,11 +14,12 @@
   <div class="menu">
     <div class="logo">
         <img src="assets/logoTM.png" alt="TimeMaster Logo" />
+        <br>
         <span class="site-title">TimeMaster</span>
       </div>
     <div class="menu-items">
         <div class="menu-item">
-            <a [routerLink]="['/home']">
+            <a [routerLink]="['/admin/home']">
                 <img src="assets/icons/Home.png" alt="Home Icon" />
                 <p>Home</p>
             </a>
@@ -40,7 +41,7 @@
         <div class="menu-item">
             <a [routerLink]="['/admin/establishments']">
                 <img src="assets/icons/Uni.png" alt="Subjects Icon" />
-              <span>Establishments</span>
+              <p>Establishments</p>
             </a>
         </div>
         <div class="menu-item">
@@ -58,7 +59,7 @@
 
         <div class="menu-item">
             <a [routerLink]="['/admin/courses']">
-                <img src="assets/icons/Teaching.png" alt="Subjects Icon" />
+                <img src="assets/icons/Subject.png" alt="Subjects Icon" />
                 <p>Courses</p>
             </a>
         </div>
