--- a/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -66,7 +66,7 @@
       
 
         <div class="menu-item">
-            <a [routerLink]="['/admin/timetables']">
+            <a [routerLink]="['/admin/schedule']">
                 <img src="assets/icons/Schedule.png" alt="Subjects Icon" />
                 <p>Timetables</p>
             </a>
