--- a/src/app/admin/admin-establishments/admin-establishments.component.html
+++ b/src/app/admin/admin-establishments/admin-establishments.component.html
@@ -4,8 +4,9 @@
 <div class="top-right-section">
     <!-- Search Bar -->
     <div class="search-bar">
-        <input type="text" placeholder="Search" class="search-input" />
-    </div>
+        <input type="text" placeholder="Search" class="search-input" [(ngModel)]="searchQuery" (keyup)="onSearch()" />
+      </div>
+      
 
     <!-- Profile Section -->
     <div class="profile-section">
